Added files via upload

--- a/index.html
+++ b/index.html
@@ -2,9 +2,36 @@
 <head>
   <title>Dying Ember</title>
 </head>
+<style>
+body {
+  background-image:url(bg.png);
+  background-size:100%;
+  background-repeat:no-repeat;
+  padding:0;
+  margin:0;
+}
+
+div.main {
+    background: linear-gradient(to bottom, rgba(255,0,0,0), rgb(107, 56, 57));
+    height: 55vw;
+}
+
+html {
+  background: rgb(107, 56, 57);
+}
+h2 {
+  font-weight:normal;
+  font-style:italic;
+  color: rgb(221, 211, 199);
+  text-align: center;
+  letter-spacing:1.2px;
+}
+</style>
 <body>
-  <h1>Dying Ember</h1>
+  <div class="main">
 
+  </div>
 
+<h2>"...and each separate dying ember wrought its ghost upon the floor..."</h2>
 </body>
 </html>
