Added files via upload

--- a/index.html
+++ b/index.html
@@ -2,9 +2,88 @@
 <head>
   <title>Dying Ember</title>
 </head>
-<body>
-  <h1>Dying Ember</h1>
+<style>
+body {
+  background-image:url(bg.png);
+  background-size:100%;
+  background-repeat:no-repeat;
+  padding:0;
+  margin:0;
+}
 
+div.main {
+    background: linear-gradient(to bottom, rgba(255,0,0,0), #000000);
+    height: 55vw;
+}
+
+html {
+  background: #000000;
+}
+h2 {
+  font-weight:normal;
+  font-style:italic;
+  color: rgb(221, 211, 199);
+  text-align: center;
+  letter-spacing:1.2px;
+}
+.concept1
+{
+  float:left;
+  width:38%;
+}
+.gif1
+{
+  float:right;
+  width:58%;
+  margin-top:150px;
+}
+.palace {
+  display:inline-block;
+  width:33%;
+}
+.clear {
+  clear:both;
+  height:100px;
+}
+.gif2{
+  width:66%;
+}
+</style>
+<body>
+  <div class="main">
+
+  </div>
+
+<h2>"...and each separate dying ember wrought its ghost upon the floor..."</h2>
+<img class="concept1" src="beast.png">
+
+<video  class="gif1" poster="https://thumbs.gfycat.com/SpicyDazzlingArachnid-poster.jpg" autoplay muted loop>
+  <source id="webmSource" src="https://zippy.gfycat.com/SpicyDazzlingArachnid.webm" type="video/webm">
+  <source id="mp4Source" src="https://fat.gfycat.com/SpicyDazzlingArachnid.mp4" type="video/mp4">
+        Sorry, your browser doesn't support HTML5 video.
+</video>
+<div class="clear">
+<video  class="palace" poster="https://thumbs.gfycat.com/FriendlyHomelyAlaskanmalamute-poster.jpg" autoplay muted loop>
+  <source id="webmSource" src="https://zippy.gfycat.com/FriendlyHomelyAlaskanmalamute.webm" type="video/webm">
+  <source id="mp4Source" src="https://fat.gfycat.com/FriendlyHomelyAlaskanmalamute.mp4" type="video/mp4">
+        Sorry, your browser doesn't support HTML5 video.
+</video>
+
+      <video  class="palace" poster="https://thumbs.gfycat.com/JollyNaiveAnnashummingbird-poster.jpg" autoplay muted loop>
+        <source id="webmSource" src="https://zippy.gfycat.com/JollyNaiveAnnashummingbird.webm" type="video/webm">
+        <source id="mp4Source" src="https://fat.gfycat.com/JollyNaiveAnnashummingbird.mp4" type="video/mp4">
+              Sorry, your browser doesn't support HTML5 video.
+      </video>
+
+      <video  class="palace" poster="https://thumbs.gfycat.com/SparseConcreteArcticseal-poster.jpg" autoplay muted loop>
+        <source id="webmSource" src="https://zippy.gfycat.com/SparseConcreteArcticseal.webm" type="video/webm">
+        <source id="mp4Source" src="https://fat.gfycat.com/SparseConcreteArcticseal.mp4" type="video/mp4">
+              Sorry, your browser doesn't support HTML5 video.
+      </video>
+
+      <img  class="palace" src="http://i.imgur.com/tSquCqR.png">
+      <img class="palace" src="http://i.imgur.com/8law5mw.jpg">
+      <img class="palace" src="http://i.imgur.com/bgcotCv.png">
 
 </body>
 </html>
