--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@ body {
 }
 
 div.main {
-    background: linear-gradient(to bottom, rgba(255,0,0,0), #000000);
+    background: linear-gradient(to bottom, rgba(0,0,0,0), #000000);
     height: 55vw;
 }
 
@@ -84,6 +84,8 @@ h2 {
       <img  class="palace" src="http://i.imgur.com/tSquCqR.png">
       <img class="palace" src="http://i.imgur.com/8law5mw.jpg">
       <img class="palace" src="http://i.imgur.com/bgcotCv.png">
+
+      <h3><i>Dying Ember</i> </h3>
 
 </body>
 </html>
