Added files via upload

--- a/index.html
+++ b/index.html
@@ -31,6 +31,16 @@ h2 {
   float:left;
   width:38%;
 }
+h3
+{
+  font-weight:normal;
+  color: rgb(221, 211, 199);
+  text-align: left;
+  letter-spacing:1.2px;
+  width:66%;
+  margin-bottom:100px;
+  margin-top:100px;
+}
 .gif1
 {
   float:right;
@@ -43,7 +53,7 @@ h2 {
 }
 .clear {
   clear:both;
-  height:100px;
+  height:0px;
 }
 .gif2{
   width:66%;
@@ -62,7 +72,14 @@ h2 {
   <source id="mp4Source" src="https://fat.gfycat.com/SpicyDazzlingArachnid.mp4" type="video/mp4">
         Sorry, your browser doesn't support HTML5 video.
 </video>
-<div class="clear">
+<div class="clear"></div>
+<center>
+  <iframe width="66%" height="500vw" src="https://www.youtube.com/embed/ZT_1NX1zu1c" frameborder="0" allowfullscreen></iframe>
+
+<h3>Deep underground lives an ancient race of creatures. For centuries they have left mankind alone, until one day, when the sky went black.
+<br><br><i>Dying Ember</i> brings brutal combat into a beautiful interconnected underground isometric world. Fight massive creatures and harvest their corpses to upgrade weapons, armor and spells. <i>Dying Ember</i> requires precision combat, watching enemies for opeings, and punishes you for making mistakes. There is no map, no quest marker, no regenerating health. This is not your nephew's video game.<br>
+</h3>
+</center>
 <video  class="palace" poster="https://thumbs.gfycat.com/FriendlyHomelyAlaskanmalamute-poster.jpg" autoplay muted loop>
   <source id="webmSource" src="https://zippy.gfycat.com/FriendlyHomelyAlaskanmalamute.webm" type="video/webm">
   <source id="mp4Source" src="https://fat.gfycat.com/FriendlyHomelyAlaskanmalamute.mp4" type="video/mp4">
@@ -85,7 +102,6 @@ h2 {
       <img class="palace" src="http://i.imgur.com/8law5mw.jpg">
       <img class="palace" src="http://i.imgur.com/bgcotCv.png">
 
-      <h3><i>Dying Ember</i> </h3>
 
 </body>
 </html>
