Added files via upload

--- a/index.html
+++ b/index.html
@@ -58,6 +58,17 @@ h3
 .gif2{
   width:66%;
 }
+h3 a {
+    display: block;
+    text-align: center;
+    opacity: 0.7;
+    margin-top:50px;
+
+}
+h3 a:hover {
+  opacity:1;
+}
+
 </style>
 <body>
   <div class="main">
@@ -77,9 +88,17 @@ h3
   <iframe width="66%" height="500vw" src="https://www.youtube.com/embed/ZT_1NX1zu1c" frameborder="0" allowfullscreen></iframe>
 
 <h3>Deep underground lives an ancient race of creatures. For centuries they have left mankind alone, until one day, when the sky went black.
-<br><br><i>Dying Ember</i> brings brutal combat into a beautiful interconnected underground isometric world. Fight massive creatures and harvest their corpses to upgrade weapons, armor and spells. <i>Dying Ember</i> requires precision combat, watching enemies for opeings, and punishes you for making mistakes. There is no map, no quest marker, no regenerating health. This is not your nephew's video game.<br>
+<br><br><i>Dying Ember</i> brings brutal combat into a beautiful interconnected underground isometric world. Fight massive creatures and harvest their corpses to upgrade weapons, armor and spells. <i>Dying Ember</i> requires precision combat, watching enemies for openings, and punishes you for making mistakes. There is no map, no quest marker, no regenerating health. This is not your nephew's video game.<br>
+<a href="http://www.twitter.com/piratevninja"><img src="twitter.png"></a>
+
 </h3>
+
 </center>
+
+
+<div class="bottom"></div>
+
+
 <video  class="palace" poster="https://thumbs.gfycat.com/FriendlyHomelyAlaskanmalamute-poster.jpg" autoplay muted loop>
   <source id="webmSource" src="https://zippy.gfycat.com/FriendlyHomelyAlaskanmalamute.webm" type="video/webm">
   <source id="mp4Source" src="https://fat.gfycat.com/FriendlyHomelyAlaskanmalamute.mp4" type="video/mp4">
@@ -101,7 +120,5 @@ h3
       <img  class="palace" src="http://i.imgur.com/tSquCqR.png">
       <img class="palace" src="http://i.imgur.com/8law5mw.jpg">
       <img class="palace" src="http://i.imgur.com/bgcotCv.png">
-
-
 </body>
 </html>
