--- a/index.html
+++ b/index.html
@@ -68,7 +68,11 @@ h3 a {
 h3 a:hover {
   opacity:1;
 }
-
+.bottom {
+width: 100%;
+height: 40vw;
+position: absolute;
+}
 </style>
 <body>
   <div class="main">
@@ -78,11 +82,13 @@ h3 a:hover {
 <h2>"...and each separate dying ember wrought its ghost upon the floor..."</h2>
 <img class="concept1" src="beast.png">
 
-<video  class="gif1" poster="https://thumbs.gfycat.com/SpicyDazzlingArachnid-poster.jpg" autoplay muted loop>
+
+
+<video class="gif1"  poster="https://thumbs.gfycat.com/SpicyDazzlingArachnid-poster.jpg" autoplay muted loop>
   <source id="webmSource" src="https://zippy.gfycat.com/SpicyDazzlingArachnid.webm" type="video/webm">
-  <source id="mp4Source" src="https://fat.gfycat.com/SpicyDazzlingArachnid.mp4" type="video/mp4">
+    <source id="mp4Source" src="https://zippy.gfycat.com/SpicyDazzlingArachnid.mp4" type="video/mp4">
         Sorry, your browser doesn't support HTML5 video.
-</video>
+      </video>
 <div class="clear"></div>
 <center>
   <iframe width="66%" height="500vw" src="https://www.youtube.com/embed/ZT_1NX1zu1c" frameborder="0" allowfullscreen></iframe>
@@ -115,6 +121,12 @@ h3 a:hover {
         <source id="webmSource" src="https://zippy.gfycat.com/SparseConcreteArcticseal.webm" type="video/webm">
         <source id="mp4Source" src="https://fat.gfycat.com/SparseConcreteArcticseal.mp4" type="video/mp4">
               Sorry, your browser doesn't support HTML5 video.
+      </video>
+
+      <video class="palace"  poster="https://thumbs.gfycat.com/SparseConcreteArcticseal-poster.jpg" autoplay muted loop>
+        <source id="webmSource" src="https://zippy.gfycat.com/SparseConcreteArcticseal.webm" type="video/webm">
+          <source id="mp4Source" src="https://zippy.gfycat.com/SparseConcreteArcticseal.mp4" type="video/mp4">
+        Sorry, your browser doesn't support HTML5 video.
       </video>
 
       <img  class="palace" src="http://i.imgur.com/tSquCqR.png">
