Added files via upload

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@ h3
   display:inline-block;
   width:33%;
 }
-.clear {
+.clear2 {
   clear:both;
   height:20px;
 }
@@ -89,15 +89,38 @@ position: absolute;
     <source id="mp4Source" src="https://zippy.gfycat.com/SpicyDazzlingArachnid.mp4" type="video/mp4">
         Sorry, your browser doesn't support HTML5 video.
       </video>
-<div class="clear"></div>
+<div class="clear2"></div>
 <center>
   <iframe width="66%" height="500vw" src="https://www.youtube.com/embed/ZT_1NX1zu1c" frameborder="0" allowfullscreen></iframe>
 
-<h3>Deep underground lives an ancient race of creatures. For centuries they have left mankind alone, until one day, when the sky went black.
-<br><br><i>Dying Ember</i> brings brutal combat into a beautiful interconnected underground isometric world. Fight massive creatures and harvest their corpses to upgrade weapons, armor and spells. <i>Dying Ember</i> requires precision combat, watching enemies for openings, and punishes you for making mistakes. There is no map, no quest marker, no regenerating health. This is not your nephew's video game.<br>
-<a href="http://www.twitter.com/piratevninja"><img src="twitter.png"></a>
 
+
+
+<h3>Deep underground lives an ancient race of creatures. For centuries, they left mankind alone, until one day, when the sky went black.
+<br><br><i>Dying Ember</i> features brutal battles in a beautiful, underground world. Find yourself in an interconnected space where you'll fight massive creatures, harvesting their corpses to upgrade weapons, armor, and spells. Dying Ember requires rigorous combat, close enemy observation, and precision—you'll be punished for mistakes. There is no map, no quest marker, and no regenerating health. This is not your nephew's video game.<br>
+<a href="http://www.twitter.com/piratevninja"><img src="twitter.png"></a>
+<!-- Begin MailChimp Signup Form -->
+<link href="http://cdn-images.mailchimp.com/embedcode/horizontal-slim-10_7.css" rel="stylesheet" type="text/css">
+<style type="text/css">
+	#mc_embed_signup{clear:left; font:14px Helvetica,Arial,sans-serif; width:100%;}
+	/* Add your own MailChimp form style overrides in your site stylesheet or in this style block.
+	   We recommend moving this block and the preceding CSS link to the HEAD of your HTML file. */
+</style>
+<div id="mc_embed_signup">
+<form action="http://ninja.us13.list-manage.com/subscribe/post?u=6d149610bca17aa74aa018db0&amp;id=7b5aa03614" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
+    <div id="mc_embed_signup_scroll">
+	<input type="email" value="" name="EMAIL" class="email" id="mce-EMAIL" placeholder="email address" required>
+    <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
+    <div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text" name="b_6d149610bca17aa74aa018db0_7b5aa03614" tabindex="-1" value=""></div>
+    <div class="clear"><input type="submit" value="Subscribe to Our Mailing List" name="subscribe" id="mc-embedded-subscribe" class="button"></div>
+    </div>
+</form>
+</div>
+
+<!--End mc_embed_signup-->
 </h3>
+
+
 
 </center>
 
